--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=StudentSevice
+
+spring.datasource.url=jdbc:h2:mem:testdbjdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.Jpa.database-platfrom = org.hibernate.dialect.h2.Dialect
+spring.datasource.h2.console.enabled= true
+spring.datasource.hibernate.ddl-auto=update
+
